clusters/home-lab/cdk8s_definitions/dist/prod-iot/home-assistant/home-assistant.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: home-assistant-23.0.5
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/version: 2024.1.3
    helm-revision: "1"
    helm.sh/chart: home-assistant-23.0.5
    release: home-assistant
    service.name: main
  name: home-assistant
  namespace: prod-iot
spec:
  ports:
    - name: main
      port: 8123
      protocol: TCP
      targetPort: 8123
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/name: home-assistant
    pod.name: main
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: home-assistant-23.0.5
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/version: 2024.1.3
    helm-revision: "1"
    helm.sh/chart: home-assistant-23.0.5
    release: home-assistant
  name: home-assistant
  namespace: prod-iot
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: home-assistant
      app.kubernetes.io/name: home-assistant
      pod.name: main
  strategy:
    type: Recreate
  template:
    metadata:
      annotations: {}
      labels:
        app: home-assistant-23.0.5
        app.kubernetes.io/instance: home-assistant
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: home-assistant
        app.kubernetes.io/version: 2024.1.3
        helm-revision: "1"
        helm.sh/chart: home-assistant-23.0.5
        pod.lifecycle: permanent
        pod.name: main
        release: home-assistant
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: TZ
              value: UTC
            - name: UMASK
              value: "0022"
            - name: UMASK_SET
              value: "0022"
            - name: PUID
              value: "568"
            - name: USER_ID
              value: "568"
            - name: UID
              value: "568"
            - name: PGID
              value: "568"
            - name: GROUP_ID
              value: "568"
            - name: GID
              value: "568"
          image: homeassistant/home-assistant:2024.1.3@sha256:96b802e5148e99ebea3c94ae7831063bede571782d4cc8368d8a9569938df51a
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 8123
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: home-assistant
          ports:
            - containerPort: 8123
              name: main
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 8123
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 2
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 4000m
              memory: 300Mi
            requests:
              cpu: 200m
              memory: 300Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - CAP_NET_RAW
                - CAP_NET_BIND_SERVICE
                - CHOWN
                - SETUID
                - SETGID
                - FOWNER
                - DAC_OVERRIDE
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 0
            runAsNonRoot: false
            runAsUser: 0
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            failureThreshold: 60
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 8123
            timeoutSeconds: 2
          stdin: false
          tty: false
          volumeMounts:
            - mountPath: /config
              name: config
              readOnly: false
            - mountPath: /dev/shm
              name: devshm
              readOnly: false
            - mountPath: /shared
              name: shared
              readOnly: false
            - mountPath: /tmp
              name: tmp
              readOnly: false
            - mountPath: /var/logs
              name: varlogs
              readOnly: false
            - mountPath: /var/run
              name: varrun
              readOnly: false
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      hostUsers: true
      nodeSelector:
        kubernetes.io/arch: amd64
      restartPolicy: Always
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
          - 568
        sysctls: []
      serviceAccountName: default
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 60
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app.kubernetes.io/instance: home-assistant
              app.kubernetes.io/name: home-assistant
              pod.name: main
          maxSkew: 1
          nodeAffinityPolicy: Honor
          nodeTaintsPolicy: Honor
          topologyKey: truecharts.org/rack
          whenUnsatisfiable: ScheduleAnyway
        - labelSelector:
            matchLabels:
              app.kubernetes.io/instance: home-assistant
              app.kubernetes.io/name: home-assistant
              pod.name: main
          maxSkew: 1
          nodeAffinityPolicy: Honor
          nodeTaintsPolicy: Honor
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant
        - emptyDir:
            medium: Memory
            sizeLimit: 300Mi
          name: devshm
        - configMap:
            defaultMode: 511
            name: home-assistant-init
            optional: false
          name: init
        - emptyDir: {}
          name: shared
        - emptyDir:
            medium: Memory
            sizeLimit: 300Mi
          name: tmp
        - emptyDir:
            medium: Memory
            sizeLimit: 300Mi
          name: varlogs
        - emptyDir:
            medium: Memory
            sizeLimit: 300Mi
          name: varrun
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: prod-infra-basic-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  labels:
    app: home-assistant-23.0.5
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/version: 2024.1.3
    helm-revision: "1"
    helm.sh/chart: home-assistant-23.0.5
    release: home-assistant
  name: home-assistant
  namespace: prod-iot
spec:
  rules:
    - host: home-assistant.st0rmingbr4in.com
      http:
        paths:
          - backend:
              service:
                name: home-assistant
                port:
                  number: 8123
            path: /
            pathType: Prefix
